--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.61",
     "@types/react": "^16.9.49",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-infinite-scroller": "^1.2.1",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-slick": "^0.23.4",
+    "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
+    "nuka-carousel": "^4.7.1",
+    "rc-pagination": "^3.0.4",
     "react": "^16.13.1",
+    "react-content-loader": "^5.1.2",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-loading-skeleton": "^2.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "^3.7.5"
@@ -22,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,12 +54,19 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
-    "eslint-config": "^0.3.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-standard": "^4.0.1",
     "prettier": "^2.1.2"
   }
 }
